<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:id="@+id/status_gif"
        android:layout_marginBottom="50dp"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/failed_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_transaction_failed"
        android:textSize="20sp"
        android:textColor="@color/red"
        android:gravity="center"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:id="@+id/error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_failed_message"
        android:textSize="20sp"
        android:layout_margin="20dp"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/go_back" />

</LinearLayout>
