<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/pin_edit_text"
    android:layout_margin="5dp"
    android:padding="8dp">

    <TextView
        android:id="@+id/txtRs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rs"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/txtDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:text="@string/description" />

    <TextView
        android:id="@+id/txtValidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:text="@string/validity" />

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:text="Description"
      />


</LinearLayout>
