<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F4E7E7">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/blue_theme_color"
        android:elevation="10dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:minHeight="?attr/actionBarSize"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/btn_select_recharge_plan_back_image"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/back_image"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_baseline_arrow_back"
                app:tint="@color/white"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"

                android:gravity="center_vertical"
                android:text="@string/select_a_recharge_plan"
                android:textColor="@color/white"
                android:textSize="22sp" />
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <RelativeLayout
        android:id="@+id/profile_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
        >
        <ImageView
            android:id="@+id/avater_img"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_baseline_account_circle_profile"
            app:tint="@color/black"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            />
        <TextView
            android:id="@+id/name"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:padding="2dp"
            android:text="@string/name"
            android:layout_marginTop="10sp"
            android:layout_toEndOf="@+id/avater_img"
            />

        <TextView
            android:id="@+id/ph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text=""
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@+id/avater_img"
            android:layout_below="@id/name"
            />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/review_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profile_rl"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        android:gravity="center"
        android:layout_margin="20dp"
        android:background="@drawable/card_view_bg"
        android:padding="10dp"
        >
        <TextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/amount_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_alignParentEnd="true"
            android:textAlignment="textEnd"
            android:layout_toEndOf="@+id/amount"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/validity_txt"
            android:layout_below="@+id/amount_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/validity"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/validity"
            android:layout_below="@+id/amount_txt"
            android:layout_toEndOf="@+id/validity_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_alignParentEnd="true"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="normal"
            />
        <TextView
            android:id="@+id/description_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/validity"
            android:text="@string/details"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/validity"
            android:layout_toEndOf="@+id/description_txt"
            android:text=""
            android:layout_alignParentEnd="true"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="normal"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_review"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:elevation="10dp"

            android:gravity="center"
            android:text="@string/continuee"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_below="@+id/description"
            android:layout_centerVertical="true"
            android:layout_marginTop="50dp"
            />

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/update_operator_et"
        android:visibility="visible"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom_edit_text_rounded"
        android:backgroundTint="@color/white"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:drawablePadding="5dp"
        android:hint="@string/select_operator"
        android:drawableStart="@drawable/ic_baseline_sim_card"
        android:maxLines="1"

        android:textSize="18sp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/profile_rl"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"/>

    <RelativeLayout
        android:id="@+id/recharge_plan_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_operator_et"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="visible"
        >
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="10dp"
            app:tabGravity="fill"
            app:tabIndicatorColor="@android:color/black"
            app:tabIndicatorHeight="4dp"
            app:tabMode="scrollable"
            android:background="@drawable/pin_edit_text"
            app:tabTextColor="@android:color/black"

            />

        <RelativeLayout
            android:id="@+id/view_plan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabs"

            android:layout_marginTop="75dp"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewpager"
                android:layout_marginBottom="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>